// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiIconTip is rendered 1`] = `
<span
  class="euiToolTipAnchor"
>
  <div
    aria-label="aria-label"
    data-euiicon-type="questionInCircle"
    tabindex="0"
  />
</span>
`;

exports[`EuiIconTip props color is rendered as the icon color 1`] = `
<span
  class="euiToolTipAnchor"
>
  <div
    aria-label="Info"
    color="warning"
    data-euiicon-type="questionInCircle"
    tabindex="0"
  />
</span>
`;

exports[`EuiIconTip props size is rendered as the icon size 1`] = `
<span
  class="euiToolTipAnchor"
>
  <div
    aria-label="Info"
    data-euiicon-type="questionInCircle"
    tabindex="0"
  />
</span>
`;

exports[`EuiIconTip props type is rendered as the icon 1`] = `
<span
  class="euiToolTipAnchor"
>
  <div
    aria-label="Info"
    data-euiicon-type="alert"
    tabindex="0"
  />
</span>
`;
